--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -28,6 +28,64 @@ nav ul li {
   font-weight: bold;
 }
 
+main {
+  position: relative;
+}
+main .next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 40%;
+  right: 5%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #dcedf2;
+  color: #fff;
+  font-size: 40px;
+  cursor: pointer;
+  line-height: 48px;
+  text-align: center;
+  text-indent: -2px;
+  transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+main .next:hover {
+  transform: scale(1.2);
+}
+main .next:active {
+  transform: translate(0, 3px) scale(1.2);
+}
+main .next i {
+  color: #fff;
+}
+main .prev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 40%;
+  left: 5%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #dcedf2;
+  font-size: 40px;
+  cursor: pointer;
+  line-height: 48px;
+  text-align: center;
+  text-indent: -2px;
+  transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+main .prev:hover {
+  transform: scale(1.2);
+}
+main .prev:active {
+  transform: translate(0, 3px) scale(1.2);
+}
+main .prev i {
+  color: #fff;
+}
 main .container-main {
   height: 1400px;
   width: 100%;
