--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -1,3 +1,8 @@
+/**
+*
+* Testing
+*
+**/
 * {
   margin: 0;
   padding: 0;
@@ -26,6 +31,55 @@ nav ul li {
   padding: 10px;
   font-size: 30px;
   font-weight: bold;
+}
+nav ul li a:visited {
+  text-decoration: none;
+  color: #0a3779;
+}
+nav .hamburger {
+  width: 40px;
+  margin: 0 auto;
+  display: none;
+}
+nav .hamburger div {
+  width: 40px;
+  height: 4px;
+  background-color: #0a3779;
+  margin: 5px 0;
+}
+@media (max-width: 360px) and (max-width: 767px) {
+  nav ul {
+    display: none;
+  }
+  nav .hamburger {
+    width: 40px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    display: block;
+  }
+  nav .hamburger div {
+    width: 40px;
+    height: 4px;
+    background-color: #0a3779;
+    margin: 5px 0;
+  }
+}
+@media (min-width: 769px) and (max-width: 1365px) {
+  nav ul {
+    display: none;
+  }
+  nav .hamburger {
+    width: 40px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    display: block;
+  }
+  nav .hamburger div {
+    width: 40px;
+    height: 4px;
+    background-color: #0a3779;
+    margin: 5px 0;
+  }
 }
 
 main {
@@ -128,6 +182,64 @@ main .product-container .description-container .pasta-description {
   font-weight: bold;
   font-size: 22px;
 }
+@media (max-width: 360px) and (max-width: 767px) {
+  main .container-main {
+    height: 2400px;
+  }
+  main .container-main .centered-container .pasta-container a img {
+    height: 180px;
+    padding: 10px;
+  }
+  main .product-container .description-container .pasta-description {
+    font-size: 18px;
+  }
+  main .next {
+    top: 50%;
+    right: 0;
+    width: 25px;
+    height: 40px;
+    font-size: 18px;
+    border-radius: 0%;
+  }
+  main .prev {
+    top: 50%;
+    left: 0;
+    width: 25px;
+    height: 40px;
+    font-size: 18px;
+    border-radius: 0%;
+  }
+}
+@media (min-width: 769px) and (max-width: 1365px) {
+  main .next {
+    top: 50%;
+    right: 0;
+    width: 70px;
+    height: 100px;
+    font-size: 32px;
+    border-radius: 0%;
+    transform: translateY(-50%);
+  }
+  main .prev {
+    top: 50%;
+    left: 0;
+    width: 70px;
+    height: 100px;
+    font-size: 32px;
+    border-radius: 0%;
+    transform: translateY(-50%);
+  }
+  main .container-main {
+    height: 1550px;
+  }
+  main .container-main .centered-container .pasta-container a img {
+    height: 190px;
+    padding: 10px;
+  }
+  main .product-container .description-container .pasta-description {
+    font-size: 18px;
+  }
+}
 
 footer {
   color: #757272;
@@ -148,4 +260,23 @@ footer .footer-container ul {
 }
 footer .footer-container ul li {
   padding: 2px 0;
+}
+@media (max-width: 360px) and (max-width: 767px) {
+  footer .footer-container {
+    display: block;
+  }
+}
+@media (min-width: 769px) and (max-width: 1365px) {
+  footer .footer-container {
+    width: 60%;
+    margin-left: 10%;
+    display: block;
+  }
+  footer .footer-container ul {
+    list-style: none;
+    margin: 5px 0;
+  }
+  footer .footer-container ul li {
+    padding: 2px 0;
+  }
 }
