--- a/laravel/resources/sass/app.scss
+++ b/laravel/resources/sass/app.scss
@@ -278,13 +278,14 @@ main {
         }
 
         .container-main {
-            height: 1550px;
+            height: 1700px;
 
             .centered-container{
+                width: 90%;
                 .pasta-container {
                     a {
                         img{
-                            height: 190px;
+                            height: 210px;
                             padding: 10px;
                         }
                     }
